--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,14 +6,14 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:name=".presenter.MainApplication"
+        android:name=".shared.controler.MainApplication"
         android:allowBackup="false"
         android:icon="@mipmap/ic_pop_corn"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_pop_corn_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MVPPattern">
-        <activity android:name=".presenter.activities.MainActivity">
+        <activity android:name=".shared.controler.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
